# eridian

./: .gitignore  README.md  go.mod  go.sum  justfile  main.go  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/learning-opportunities/resources/: orientation.md
cmd/: clean.go  edit.go  label.go  list.go  new.go  root.go  status.go  translate.go  use.go
docs/: architecture.excalidraw  cli.excalidraw  research.md
internal/config/: config.go  sync.go
internal/mlservice/: client.gen.go  openapi.json
internal/store/: model.go  service.go
src/eridian/: main.py
