[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[project]
name = "eridian"
version = "0.1.0"
description = "backend for Eridian"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
eridian-py = "eridian.main:start"
